--- a/navbar.html
+++ b/navbar.html
@@ -7,7 +7,8 @@
     <title>Home</title>
 </head>
 <body>
-    <h3>This is home page</h3>
+    <h3>This is home page</h3> 
+    <h2>new try to check git status</h2>
     <!-- <img src="home.jpg" alt="Image not found" height="350px" width="600px"> -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
